@@ -1,1 +1,1 @@
-2.2beta4-dev
+2.2-beta4
